--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,10 +3,9 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
-
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -25,7 +24,8 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ubuntu
         key: ${{ secrets.KEY }}
-        script: mkdir -p /home/ubuntu/srv/ubuntu
+        script: |
+          mkdir -p /home/ubuntu/srv/ubuntu
 
     - name: copy source via ssh key
       uses: burnett01/rsync-deployments@4.1
