--- a/.env.prod
+++ b/.env.prod
@@ -1,9 +1,9 @@
 DATABASE_HOST=shawn-mysql.c81tznyca4ah.ap-northeast-2.rds.amazonaws.com
 DATABASE_DB=mysql
 DATABASE_NAME=mydb
-DATABASE_USER=root
+DATABASE_USER=admin
 DATABASE_PASSWORD=therapease
 DATABASE_PORT=3306
 DEBUG=False
-DJANGO_ALLOWED_HOSTS=ec2-3-37-130-52.ap-northeast-2.compute.amazonaws.com
-DJANGO_SECRET_KEY=2ld39#d-osb@s5*7cfmg2#ilvz(@!k5p$(zdo6+t1u%hzkzxt%
+DJANGO_ALLOWED_HOSTS=ec2-13-124-55-75.ap-northeast-2.compute.amazonaws.com
+DJANGO_SECRET_KEY='+*w)yeuvcsl&u3j+%k%1o%z(_7#nz4^i!=jk7ort_)tgd4gvg%'
