--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
-asgiref==3.2.10
+#asgiref==3.2.10
+#Django==4.2.3
+#django-environ==0.4.5
+#gunicorn==20.0.4
+#pytz==2020.1
+#sqlparse==0.3.1
+
+asgiref==3.6.0
 Django==3.2.16
-django-environ==0.4.5
-gunicorn==20.0.4
-pytz==2020.1
-sqlparse==0.3.1
+django-environ==0.9.0
+gunicorn==20.1.0
+pytz==2022.7.1
+sqlparse==0.4.3
+django-filter==21.1
+djangorestframework-simplejwt==5.2.2
+PyMySQL==1.0.2
