--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -11,7 +11,8 @@ server {
     proxy_pass $service_url;
     #proxy_pass http://127.0.0.1:8080;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
+    #proxy_set_header Host $host;
+    proxy_set_header Host $http_host;
     proxy_redirect off;
   }
 
