--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,4 +1,4 @@
-upstream TherapEase-BE {
+upstream django_rest_framework_17th {
   server web:8000;
 }
 
@@ -7,13 +7,9 @@ server {
   listen 80;
 
   location / {
-    #proxy_pass http://TherapEase-BE;
-    proxy_pass $service_url;
-    #proxy_pass http://127.0.0.1:8080;
-    proxy_set_header X-Real-IP $remote_addr; #추가
+    proxy_pass http://django_rest_framework_17th;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #proxy_set_header Host $host;
-    proxy_set_header Host $http_host;
+    proxy_set_header Host $host;
     proxy_redirect off;
   }
 
