--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -7,9 +7,7 @@ server {
   listen 80;
 
   location / {
-    #proxy_pass http://django_rest_framework_17th;
-     proxy_pass http://43.200.108.103;
-    #proxy_pass http://localhost:8000/;
+    proxy_pass http://django_rest_framework_17th;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
     proxy_redirect off;
