--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,6 @@
 DATABASE_HOST=therapease-mysql.c81tznyca4ah.ap-northeast-2.rds.amazonaws.com
 DATABASE_DB=therapease
-DATABASE_NAME=admin
+DATABASE_NAME=mydb
 DATABASE_USER=admin
 DATABASE_PASSWORD=therapease
 DATABASE_PORT=3306
