--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -9,7 +9,8 @@ server {
   location / {
     #proxy_pass http://django_rest_framework_17th;
     #proxy_pass http://django_rest_framework_17th:8000;
-    proxy_pass http://127.0.0.1:8000;
+    #proxy_pass http://127.0.0.1:8000;
+    proxy_pass http://43.200.108.103:8000;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
     proxy_redirect off;
