--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,5 @@
 DATABASE_HOST=therapease-mysql.c81tznyca4ah.ap-northeast-2.rds.amazonaws.com
-DATABASE_DB=mydb
+DATABASE_DB=mysql
 DATABASE_NAME=mydb
 DATABASE_USER=admin
 DATABASE_PASSWORD=therapease
