--- a/.env.prod
+++ b/.env.prod
@@ -1,9 +1,9 @@
-DATABASE_HOST=therapease-mysql.c81tznyca4ah.ap-northeast-2.rds.amazonaws.com
+DATABASE_HOST=jryeong.c2vt7g52k0os.ap-northeast-2.rds.amazonaws.com
 DATABASE_DB=mysql
-DATABASE_NAME=mydb
+DATABASE_NAME=jryeong
 DATABASE_USER=admin
-DATABASE_PASSWORD=therapease
+DATABASE_PASSWORD=j20020607
 DATABASE_PORT=3306
 DEBUG=False
-DJANGO_ALLOWED_HOSTS=ec2-43-200-108-103.ap-northeast-2.compute.amazonaws.com
+DJANGO_ALLOWED_HOSTS=ec2-43-200-91-200.ap-northeast-2.compute.amazonaws.com
 DJANGO_SECRET_KEY='+*w)yeuvcsl&u3j+%k%1o%z(_7#nz4^i!=jk7ort_)tgd4gvg%'
