--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -7,7 +7,7 @@ server {
   listen 80;
 
   location / {
-    proxy_pass http://django_rest_framework_17th:8000; # 원래 :8000 없었는데 bad gateway 해결하려고 추가
+    proxy_pass http://TherapEase-BE:8000; # 원래 :8000 없었는데 bad gateway 해결하려고 추가
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
     proxy_redirect off;
