--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,7 +7,7 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile.prod
-    command: gunicorn TherapEase-BE.wsgi:application —bind 0.0.0.0:8000
+    command: gunicorn TherapEase-BE.wsgi:application --bind 0.0.0.0:8000
     environment:
       DJANGO_SETTINGS_MODULE: TherapEase-BE.settings.prod
     env_file:
@@ -28,7 +28,7 @@ services:
       - static:/home/app/web/static
       - media:/home/app/web/media
     ports:
-      - "80:80"
+      - 80:80
     depends_on:
       - web
 
