--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
-#asgiref==3.2.10
-#Django==4.2.3
-#django-environ==0.4.5
-#gunicorn==20.0.4
-#pytz==2020.1
-#sqlparse==0.3.1
-
 asgiref==3.6.0
 Django==3.2.16
 django-environ==0.9.0
@@ -14,3 +7,4 @@ sqlparse==0.4.3
 django-filter==21.1
 djangorestframework-simplejwt==5.2.2
 PyMySQL==1.0.2
+djangorestframework==3.12.4
