--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -5,6 +5,7 @@ upstream TherapEase-BE {
 server {
 
   listen 80;
+  server_name *.therapease.co.kr;
 
   location / {
     proxy_pass http://TherapEase-BE;
