--- a/.env.prod
+++ b/.env.prod
@@ -4,6 +4,6 @@ DATABASE_NAME=jryeong
 DATABASE_USER=admin
 DATABASE_PASSWORD=j20020607
 DATABASE_PORT=3306
-DEBUG=False
+DEBUG=True
 DJANGO_ALLOWED_HOSTS=ec2-43-201-83-172.ap-northeast-2.compute.amazonaws.com
 DJANGO_SECRET_KEY='+*w)yeuvcsl&u3j+%k%1o%z(_7#nz4^i!=jk7ort_)tgd4gvg%'
