--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -3,18 +3,9 @@ upstream TherapEase-BE {
 }
 
 server {
+
   listen 80;
-  server_name therapease.co.kr;
-
-  # HTTP to HTTPS Redirect
-  return 301 https://$host$request_uri;
-}
-
-server {
-
-  listen 443 ssl;
-  server_name therapease.co.kr;
-
+  #server_name *.therapease.co.kr;
 
   location / {
     proxy_pass http://TherapEase-BE;
@@ -25,6 +16,7 @@ server {
 
   location /static/ {
     alias /home/app/web/static/;
+    # so
   }
 
   location /media/ {
